doc-surrealdb_versioned_docs/version-1.x/surrealql/functions/database/array.mdx
---
sidebar_position: 2
sidebar_label: Array functions
title: Array functions | SurrealQL
description: These functions can be used when working with, and manipulating arrays of data.
---

# Array functions

These functions can be used when working with, and manipulating arrays of data.

<table>
  <thead>
    <tr>
      <th scope="col">Function</th>
      <th scope="col">Description</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayadd"><code>array::add()</code></a></td>
      <td scope="row" data-label="Description">Adds an item to an array if it doesn't exist</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayall"><code>array::all()</code></a></td>
      <td scope="row" data-label="Description">Checks whether all array values are truthy</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayany"><code>array::any()</code></a></td>
      <td scope="row" data-label="Description">Checks whether any array value is truthy</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayat"><code>array::at()</code></a></td>
      <td scope="row" data-label="Description">Returns value for X index, or in reverse for a negative index</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayappend"><code>array::append()</code></a></td>
      <td scope="row" data-label="Description">Appends an item to the end of an array</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayboolean_and"><code>array::boolean_and()</code></a></td>
      <td scope="row" data-label="Description">Perform the <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_AND">AND</a><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_AND"> </a><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_AND">bitwise operations</a> on two arrays</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayboolean_or"><code>array::boolean_or()</code></a></td>
      <td scope="row" data-label="Description">Perform the <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Bitwise_OR">OR</a><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Bitwise_OR"> </a><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Bitwise_OR">bitwise operations</a> on two arrays</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayboolean_xor"><code>array::boolean_xor()</code></a></td>
      <td scope="row" data-label="Description">Perform the <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Bitwise_XOR">XOR</a><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Bitwise_XOR"> </a><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Bitwise_XOR">bitwise operations</a> on two arrays</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayboolean_not"><code>array::boolean_not()</code></a></td>
      <td scope="row" data-label="Description">Perform the <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Bitwise_NOT">NOT</a><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Bitwise_NOT"> </a><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Bitwise_NOT">bitwise operations</a> on an array</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraycombine"><code>array::combine()</code></a></td>
      <td scope="row" data-label="Description">Combines all values from two arrays together</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraycomplement"><code>array::complement()</code></a></td>
      <td scope="row" data-label="Description">Returns the complement of two arrays</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayclump"><code>array::clump()</code></a></td>
      <td scope="row" data-label="Description">Returns the original array split into multiple arrays of X size</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayconcat"><code>array::concat()</code></a></td>
      <td scope="row" data-label="Description">Returns the merged values from two arrays</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraydifference"><code>array::difference()</code></a></td>
      <td scope="row" data-label="Description">Returns the difference between two arrays</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraydistinct"><code>array::distinct()</code></a></td>
      <td scope="row" data-label="Description">Returns the unique items in an array</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayfind_index"><code>array::find_index()</code></a></td>
      <td>Returns the index of the first occurrence of X value</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayfilter_index"><code>array::filter_index()</code></a></td>
      <td scope="row" data-label="Description">Find the indexes of all occurrences of all matching X value</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayfirst"><code>array::first()</code></a></td>
      <td scope="row" data-label="Description">Returns the first item in an array</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayflatten"><code>array::flatten()</code></a></td>
      <td scope="row" data-label="Description">Flattens multiple arrays into a single array</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraygroup"><code>array::group()</code></a></td>
      <td scope="row" data-label="Description">Flattens and returns the unique items in an array</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayinsert"><code>array::insert()</code></a></td>
      <td scope="row" data-label="Description">Inserts an item at the end of an array, or in a specific position, supports negative index</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayintersect"><code>array::intersect()</code></a></td>
      <td scope="row" data-label="Description">Returns the values which intersect two arrays</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayjoin"><code>array::join()</code></a></td>
      <td scope="row" data-label="Description">Returns concatenated value of an array with a string in between.</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraylast"><code>array::last()</code></a></td>
      <td scope="row" data-label="Description">Returns the last item in an array</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraylen"><code>array::len()</code></a></td>
      <td scope="row" data-label="Description">Returns the length of an array</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraylogical_and"><code>array::logical_and()</code></a></td>
      <td scope="row" data-label="Description">Performs the <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_AND">AND</a><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_AND"> </a><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_AND">logical operations</a> on two arrays</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraylogical_or"><code>array::logical_or()</code></a></td>
      <td scope="row" data-label="Description">Performs the <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_OR">OR</a><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_OR"> </a><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_OR">logical operations</a> on two arrays</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraylogical_xor"><code>array::logical_xor()</code></a></td>
      <td scope="row" data-label="Description">Performs the <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_OR">XOR</a><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_OR"> </a><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_OR">logical operations</a> on two arrays</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraymax"><code>array::max()</code></a></td>
      <td scope="row" data-label="Description">Returns the maximum item in an array</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraymatches"><code>array::matches()</code></a></td>
      <td scope="row" data-label="Description">Returns an array of booleans</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraymin"><code>array::min()</code></a></td>
      <td scope="row" data-label="Description">Returns the minimum item in an array</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraypop"><code>array::pop()</code></a></td>
      <td scope="row" data-label="Description">Returns the last item from an array</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayprepend"><code>array::prepend()</code></a></td>
      <td scope="row" data-label="Description">Prepends an item to the beginning of an array</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraypush"><code>array::push()</code></a></td>
      <td scope="row" data-label="Description">Appends an item to the end of an array</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayremove"><code>array::remove()</code></a></td>
      <td scope="row" data-label="Description">Removes an item at a specific position from an array, supports negative index</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayreverse"><code>array::reverse()</code></a></td>
      <td scope="row" data-label="Description">Reverses the sorting order of an array</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayshuffle"><code>array::shuffle()</code></a></td>
      <td scope="row" data-label="Description">Sorts the values in an array in random order</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraysort"><code>array::sort()</code></a></td>
      <td scope="row" data-label="Description">Sorts the values in an array in ascending or descending order</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayslice"><code>array::slice()</code></a></td>
      <td scope="row" data-label="Description">Returns a slice of an array</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraysortasc"><code>array::sort::asc()</code></a></td>
      <td scope="row" data-label="Description">Sorts the values in an array in ascending order</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraysortdesc"><code>array::sort::desc()</code></a></td>
      <td scope="row" data-label="Description">Sorts the values in an array in descending order</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arraytranspose"><code>array::transpose()</code></a></td>
      <td scope="row" data-label="Description">Performs 2d array transposition on two arrays</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#arrayunion"><code>array::union()</code></a></td>
      <td scope="row" data-label="Description">Returns the unique merged values from two arrays</td>
    </tr>
  </tbody>
</table>

## `array::add`

The `array::add` function adds an item to an array only if it doesn't exist.

```surql title="API DEFINITION"
array::add(array, value) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::add(["one", "two"], "three");

["one", "two", "three"]
```

<br />

## `array::all`

The `array::all` function checks whether all array values are truthy.

```surql title="API DEFINITION"
array::all(array) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::all([ 1, 2, 3, NONE, 'SurrealDB', 5 ]);

false
```

<br />

## `array::any`

The `array::any` function checks whether any array values are truthy.

```surql title="API DEFINITION"
array::any(array) -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::any([ 1, 2, 3, NONE, 'SurrealDB', 5 ]);

true
```

<br />

## `array::at`

The `array::at` function returns value for X index, or in reverse for a negative index.

```surql title="API DEFINITION"
array::at(array, index) -> any
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::at(['s', 'u', 'r', 'r', 'e', 'a', 'l'], 2);

"r"
```
You can also pass a negative index. This will perform the lookup in reverse:
```surql
RETURN array::at(['s', 'u', 'r', 'r', 'e', 'a', 'l'], -3);

"e"
```

<br />

## `array::append`

The `array::append` function appends a value to the end of an array.

```surql title="API DEFINITION"
array::append(array, value) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::append([1, 2, 3, 4], 5);

[ 1, 2, 3, 4, 5 ]
```

<br />

## `array::boolean_and`

The `array::boolean_and` Perform the [`AND` `bitwise operations`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_AND) on the input arrays per-element based on the element's truthiness.
If one array is shorter than the other it is considered null and thus false.

```surql title="API DEFINITION"
array::boolean_and(lh: Array, rh: Array)
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::boolean_and(["true", "false", 1, 1], ["true", "true", 0, "true"]);

[true, false, false, true]
```
For those that take two arrays, missing elements (if one array is shorter than the other) are considered `null` and thus false.

```surql
RETURN array::boolean_and([true, true], [false])

[ false, false ]
```

<br />

## `array::boolean_or`

The `array::boolean_or` Perform the [OR bitwise operations](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Bitwise_OR) on the input arrays per-element based on the element's truthiness.
It takes two arrays and if one array is shorter than the other or missing, the output is considered null and thus false.

```surql title="API DEFINITION"
array::boolean_or(lh: Array, rh: Array)
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::boolean_or([false, true, false, true], [false, false, true, true])

[ false, true, true, true ]
```

<br />

## `array::boolean_xor`

The `array::boolean_xor` Performs the [XOR bitwise operations](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_OR).

```surql title="API DEFINITION"
array::boolean_xor(lh: Array, rh: Array)
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::boolean_xor([false, true, false, true], [false, false, true, true]);

[ false, true, true, false ]
```

<br />

## `array::boolean_not`

The `array::boolean_not` Perform the [`NOT bitwise operations`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Bitwise_NOT) on the input array(s) per-element based on the element's truthiness.
It takes in one array and it returns false if its single operand can be converted to true.

```surql title="API DEFINITION"
array::boolean_not(Array)
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::boolean_not([ false, true, 0, 1 ]);

[ true, false, true, false ]
```

<br />

## `array::combine`

The `array::combine` function combines all values from two arrays together, returning an array of arrays.

```surql title="API DEFINITION"
array::combine(array, array) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::combine([1,2], [2,3]);

[ [1,2], [1,3], [2,2], [2,3] ]
```

<br />

## `array::complement`

The `array::complement` function returns the complement of two arrays, returning a single array containing items which are not in the second array.

```surql title="API DEFINITION"
array::complement(array, array) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::complement([1,2,3,4], [3,4,5,6]);

[ 1, 2 ]
```

<br />

## `array::concat`

The `array::concat` function merges two arrays together, returning an array which may contain duplicate values. If you want to remove duplicate values from the resulting array, then use the [`array::union()`](/docs/surrealdb/surrealql/functions/database/array#arrayunion) function

```surql title="API DEFINITION"
array::concat(array, array) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::concat([1,2,3,4], [3,4,5,6]);

[ 1, 2, 3, 4, 3, 4, 5, 6 ]
```

<br />

## `array::clump`

The `array::clump` function returns the original array split into sub-arrays of `size`.

```surql title="API DEFINITION"
array::clump(array, value) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::clump([1, 2, 3, 4, 5], 2);

[ [1, 2], [3, 4], [5] ]
```

<br />

## `array::difference`

The `array::difference` determines the difference between two arrays, returning a single array containing items which are not in both arrays.

```surql title="API DEFINITION"
array::difference(array, array) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::difference([1,2,3,4], [3,4,5,6]);

[ 1, 2, 5, 6 ]
```

<br />

## `array::distinct`

The `array::distinct` function calculates the unique values in an array, returning a single array.

```surql title="API DEFINITION"
array::distinct(array) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::distinct([ 1, 2, 1, 3, 3, 4 ]);

[ 1, 2, 3, 4 ]
```

<br />

## `array::flatten`

The `array::flatten` flattens an array of arrays, returning a new array with all sub-array elements concatenated into it.

```surql title="API DEFINITION"
array::flatten(array, index) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::flatten([ [1,2], [3, 4], 'SurrealDB', [5, 6, [7, 8]] ]);

[ 1, 2, 3, 4, 'SurrealDB', 5, 6, [7, 8] ]
```

<br />

## `array::find_index`

The `array::find_index` Returns the index of the first occurrence of `value` in the array or `null` if `array` does not contain `value`.

```surql title="API DEFINITION"
array::find_index(array, index) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::find_index(['a', 'b', 'c', 'b', 'a'], 'b');

1
```

<br />

## `array::filter_index`

The `array::filter_index` finds the indexes of all occurrences of all matching values.

```surql title="API DEFINITION"
array::filter_index(array, index) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::filter_index(['a', 'b', 'c', 'b', 'a'], 'b');

[ 1, 3 ]
```

<br />

## `array::first`

The `array::first` function returns the first value from an array.

```surql title="API DEFINITION"
array::first(array) -> any
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::first([ 's', 'u', 'r', 'r', 'e', 'a', 'l' ]);

"s"
```

<br />

## `array::group`

The `array::group` function flattens and returns the unique items in an array.

```surql title="API DEFINITION"
array::group(array) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::group([1, 2, 3, 4, [3,5,6], [2,4,5,6], 7, 8, 8, 9]);

[ 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
```

<br />

## `array::insert`

The `array::insert`  function inserts a value into an array at a specific position, supports negative index.

```surql title="API DEFINITION"
array::insert(array, value, number) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::insert([1,2,3,4], 5, 2);

[ 1, 2, 5, 3, 4 ]
```

<br />

## `array::intersect`

The `array::intersect` function calculates the values which intersect two arrays, returning a single array containing the values which are in both arrays.

```surql title="API DEFINITION"
array::intersect(array, array) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::intersect([1,2,3,4], [3,4,5,6]);

[ 3, 4 ]
```

<br />

## `array::join`

The `array::join` function takes an array and a string as parameters and returns a concatenated string.

```surql title="API DEFINITION"
array::join(array, string) -> string
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::join(["again", "again", "again"], " and ");

"again and again and again"
```

<br />

## `array::last`

The `array::last`function returns the last value from an array.

```surql title="API DEFINITION"
array::last(array) -> any
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::last([ 's', 'u', 'r', 'r', 'e', 'a', 'l' ]);

"l"
```

<br />

## `array::len`

The `array::len` function calculates the length of an array, returning a number. This function includes all items when counting the number of items in the array. If you want to only count truthy values, then use the [count()](/docs/surrealdb/surrealql/functions/database/count) function.
```surql title="API DEFINITION"
array::len(array) -> number
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::len([ 1, 2, 1, null, "something", 3, 3, 4, 0 ]);

9
```

<br />

## `array::logical_and`

The `array::logical_and` performs the [`AND` logical operations](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_AND) local but they return the element that represents the resulting truthiness similar to the above. Note that the functions prioritize the elements on the left hand. Also, in the event that neither element can represent the truthiness of the output, the resulting element is a boolean value of the truthiness.

```surql title="API DEFINITION"
array::logical_and(lh: Array, rh: Array)
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::logical_and([true, false, true, false], [true, true, false, false]);

[ true, false, false, false ]
```
For those that take two arrays, missing elements (if one array is shorter than the other) are considered `null` and thus false

```surql
RETURN array::logical_and([0, 1], [])

[ 0, null ]
```

<br />

## `array::logical_or`

The `array::logical_or` Performs the [`OR` logical operations](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_OR). Note that the functions prioritize the elements on the left hand.


```surql title="API DEFINITION"
array::logical_or(lh: Array, rh: Array)
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::logical_or([true, false, true, false], [true, true, false, false]);

[ true, true, true, false ]
```
If one of the array is empty, the first array is returned.

```surql
RETURN array::logical_or([0, 1], []);

[ 0, 1 ]
```

<br />

## `array::logical_xor`

The `array::logical_or` performs the [`XOR` logical operations](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_OR).


```surql title="API DEFINITION"
array::logical_xor(lh: Array, rh: Array)
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::logical_xor([true, false, true, false], [true, true, false, false]);

[ false, true, true, false ]
```
If one of the array is empty, the first array is returned.
```surql
RETURN array::logical_xor([0, 1], [])

[ 0, 1 ]
```

<br />

## `array::max`

The `array::max` returns the maximum item in an array


```surql title="API DEFINITION"
array::max(Array) -> any
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::max([0, 1, 2]);

2
```

<br />

## `array::matches`

The `array::matches` returns an array of booleans


```surql title="API DEFINITION"
array::matches(Array,value) -> Array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::matches([0, 1, 2], 1);

[false, true, false]
```
The following example shows this function when the array contains objects.

```surql
RETURN array::matches([{id: "ohno:0"}, {id: "ohno:1"}], {id: "ohno:1"})

[ false, true ]
```

<br />

## `array::min`

The `array::min` returns the minimum item in an array


```surql title="API DEFINITION"
array::min(Array) -> any
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::min([0, 1, 2]);

0
```

<br />

## `array::pop`

The `array::pop` function removes a value from the end of an array and returns it.


```surql title="API DEFINITION"
array::pop(array) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::pop([ 1, 2, 3, 4 ]);

4
```

<br />

## `array::prepend`

The `array::prepend` function prepends a value to the beginning of an array.


```surql title="API DEFINITION"
array::prepend(array, value) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::prepend([1,2,3,4], 5);

[ 5, 1, 2, 3, 4 ]
```

<br />

## `array::push`

The `array::push` function prepends a value to the end of an array.


```surql title="API DEFINITION"
array::push(array, value) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::push([1,2,3,4], 5);

[ 1, 2, 3, 4, 5 ]
```

<br />

## `array::remove`

The `array::remove` function removes an item from a specific position in an array, supports negative index.


```surql title="API DEFINITION"
array::remove(array, number) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::remove([1,2,3,4,5], 2);

[ 1, 2, 4, 5 ]
```

The following examples shows this function using a negative index.
```surql
RETURN array::remove([1,2,3,4,5], -2);

[ 1, 2, 3, 5 ]
```

<br />

## `array::reverse`

The `array::reverse` function reverses the sorting order of an array.


```surql title="API DEFINITION"
array::reverse(array) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::reverse([ 1, 2, 3, 4, 5 ]);

[ 5, 4, 3, 2, 1 ]
```

<br />

## `array::shuffle`{#arrayshuffle}

The `array::shuffle` function sorts the values in an array in random order.


```surql title="API DEFINITION"
array::shuffle(array) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql title="Output - 1st iteration"
RETURN array::shuffle([ 1, 2, 3, 4, 5 ]);

[ 1, 4, 5, 3, 2 ]
```

```surql title="Output - 2nd iteration"
RETURN array::shuffle([ 1, 2, 3, 4, 5 ]);

[ 5, 2, 3, 4, 1 ]
```

<br />

## `array::sort`

The `array::sort` function sorts the values in an array in ascending or descending order.


```surql title="API DEFINITION"
array::sort(array) -> array
```

The function also accepts a second boolean parameter which determines the sorting direction. The second parameter can be `true` for ascending order, or `false` for descending order.

```surql title="API DEFINITION"
array::sort(array, bool) -> array
```
The function also accepts a second string parameter which determines the sorting direction. The second parameter can be `'asc'` for ascending order, or `'desc'` for descending order.
    
```surql title="API DEFINITION"
array::sort(array, string) -> array
```

The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::sort([ 1, 2, 1, null, "something", 3, 3, 4, 0 ]);

[ null, 0, 1, 1, 2, 3, 3, 4, "something" ]
```
```surql 
RETURN array::sort([1,2,1,null,"something",3,3,4,0], false);

[ "something", 4, 3, 3, 2, 1, 1, 9, null ]
```
```surql 
RETURN array::sort([1,2,1,null,"something",3,3,4,0], "asc");

[ null, 0, 1, 1, 2, 3, 3, 4, "something" ]
```
```surql
RETURN array::sort([1,2,1,null,"something",3,3,4,0], "desc");

[ "something", 4, 3, 3, 2, 1, 1, 9, null ]
```

<br />

## `array::slice`

The `array::slice` returns a slice of an array, based on a starting position, and a length or negative position.


```surql title="API DEFINITION"
array::slice(array, start, len) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::slice([ 1, 2, 3, 4, 5 ], 1, 2);

[2,3]
```

The following example shows how you can use this function with a starting position, and a negative position, which will slice off the first and last element from the array:

```js 
RETURN array::slice([ 1, 2, 3, 4, 5 ], 1, -1);

[ 2, 3, 4 ]
```
The following example shows how you can use this function with just a starting position, which will only slice from the beginning of the array:

```js
RETURN array::slice([ 1, 2, 3, 4, 5 ], 2);

[ 3, 4, 5 ]
```

The following example shows how you can use this function with just a negative position, which will only slice from the end of the array:

```js
RETURN array::slice([ 1, 2, 3, 4, 5 ], -2);

[ 4, 5 ]
```
The following example shows how you can use this function with a negative position, and a length of the slice:

```js
RETURN array::slice([ 1, 2, 3, 4, 5 ], -3, 2);

[ 3, 4 ]
```

<br />

## `array::sort::asc`

The `array::sort::asc` function is a shorthand convenience function for the `array::sort` function, to sort values in an array in ascending order.


```surql title="API DEFINITION"
array::sort::asc(array) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::sort::asc([ 1, 2, 1, null, "something", 3, 3, 4, 0 ]);

[ null, 0, 1, 1, 2, 3, 3, 4, "something" ]
```

<br />

## `array::sort::desc`

The `array::sort::desc` function is a shorthand convenience function for the `array::sort` function, to sort values in an array in descending order.


```surql title="API DEFINITION"
array::sort::desc(array) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::sort::desc([ 1, 2, 1, null, "something", 3, 3, 4, 0 ]);

[ "something", 4, 3, 3, 2, 1, 1, 9, null ]
```

<br />

## `array::transpose`

The `array::transpose` is used to perform 2d array transposition but it's behavior in cases of arrays of differing sizes can be best described as taking in multiple arrays and 'layering' them on top of each other.


```surql title="API DEFINITION"
array::transpose(array, array) -> array array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::transpose([[0, 1], [2, 3]]);

[ [0, 2], [1, 3] ]
```

<br />

## `array::union`

The `array::union` function combines two arrays together, removing duplicate values, and returning a single array.


```surql title="API DEFINITION"
array::union(array, array) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN array::union([1,2,1,6], [1,3,4,5,6]);

[ 1, 2, 6, 3, 4, 5 ]
```

<br /><br />